[package]
name = "gamepads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.8"
cfg-if = "1"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window"
]}